| Summary: | ASTERISK-28755: SIP/Stasis: SIP headers not transmitted in the "variables" field | ||
| Reporter: | Jean Aunis - Prescom (PrescomJA) | Labels: | |
| Date Opened: | 2020-02-24 10:20:54.000-0600 | Date Closed: | 2020-03-04 06:10:55.000-0600 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Core/Stasis |
| Versions: | 16.3.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | SIP headers received in an out-of-call SIP MESSAGE can be accessed throw the MESSAGE_DATA function. I expected to also find them in the "variables" field of the TextMessageReceived event.
But it's not the case. The variables list remains empty for inbound SIP messages (tested with both chan_sip and chan_pjsip). I think It may be due to an improper usage of the "used" data field of the msg_data structure : {code} struct msg_data { AST_DECLARE_STRING_FIELDS( AST_STRING_FIELD(name); AST_STRING_FIELD(value); ); unsigned int send; /* Whether to send out on outbound messages */ }; {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-02-24 10:20:55.914-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Kevin Harwell (kharwell) 2020-02-28 13:23:07.347-0600 [~PrescomJA] I have some patches up for [review|https://gerrit.asterisk.org/c/asterisk/+/13843]. If you are able it'd be much appreciated if you could test it and make sure stuff is working as expected now. Thanks! By: Jean Aunis - Prescom (PrescomJA) 2020-03-02 07:58:00.016-0600 It's working. I tested with both chan_sip and chan_pjsip, "variables" contains all SIP headers. Thanks for the quick answer! By: Kevin Harwell (kharwell) 2020-03-02 09:52:55.212-0600 Good to hear. Thanks for testing it! By: Friendly Automation (friendly-automation) 2020-03-04 06:10:56.325-0600 Change 13838 merged by Joshua Colp: message & stasis/messaging: make text message variables work in ARI [https://gerrit.asterisk.org/c/asterisk/+/13838|https://gerrit.asterisk.org/c/asterisk/+/13838] By: Friendly Automation (friendly-automation) 2020-03-04 06:11:23.649-0600 Change 13840 merged by Joshua Colp: message & stasis/messaging: make text message variables work in ARI [https://gerrit.asterisk.org/c/asterisk/+/13840|https://gerrit.asterisk.org/c/asterisk/+/13840] By: Friendly Automation (friendly-automation) 2020-03-04 06:12:25.738-0600 Change 13839 merged by Joshua Colp: message & stasis/messaging: make text message variables work in ARI [https://gerrit.asterisk.org/c/asterisk/+/13839|https://gerrit.asterisk.org/c/asterisk/+/13839] By: Friendly Automation (friendly-automation) 2020-03-04 06:13:21.697-0600 Change 13843 merged by Joshua Colp: message & stasis/messaging: make text message variables work in ARI [https://gerrit.asterisk.org/c/asterisk/+/13843|https://gerrit.asterisk.org/c/asterisk/+/13843] | ||